--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <title>Agustin Pina - Home</title>
   </head>
   <body>
+    <!-- Nav -->
     <nav>
       <div class="copyright">
         <p>&copy;2024</p>
@@ -142,6 +144,11 @@
         </div>
       </div>
     </div>
+
+    <!-- Cursor -->
+     <div class="cursor">
+       <p></p>
+     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
