revisi index dan work

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/setting.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <title>Agustin Pina - Home</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Document</title>
   </head>
   <body>
     <!-- Nav -->
@@ -23,55 +24,54 @@
       </div>
     </nav>
 
-    <!-- Hero -->
-    <div class="slider">
-      <div class="slider-images">
-        <div class="img">
-          <img src="./Images/hero/img1.jpg" alt="" />
-        </div>
+    <div class="container">
+      <div class="cursor"><p></p></div>
+
+      <div class="story-img">
+        <div class="img"><img src="./Images/hero/img1.jpg" alt="" /></div>
       </div>
 
-      <div class="slider-title">
-        <div class="slider-title-wrapper">
-          <div>
-            <h1>Casa</h1>
-            <h1>Cruz</h1>
+      <div class="story-content">
+        <div class="row">
+          <div class="indices">
+            <div class="index">
+              <div class="index-highlight"></div>
+            </div>
+            <div class="index">
+              <div class="index-highlight"></div>
+            </div>
+            <div class="index">
+              <div class="index-highlight"></div>
+            </div>
+            <div class="index">
+              <div class="index-highlight"></div>
+            </div>
+            <div class="index">
+              <div class="index-highlight"></div>
+            </div>
+            <div class="index">
+              <div class="index-highlight"></div>
+            </div>
           </div>
-          <h1>Casa Baricentrica</h1>
-          <h1>Holden St. House</h1>
-          <h1>Areco</h1>
-          <h1>Town Hall</h1>
-          <h1>Balcón del Cerro</h1>
+          <div class="profile">
+            <div class="profile-icon">
+              <img src="./Images/hero/img1.jpg" alt="" />
+            </div>
+            <div class="profile-name">
+              <p>1</p>
+            </div>
+          </div>
         </div>
-      </div>
-
-      <div class="slider-counter">
-        <div class="counter">
-          <p>1</p>
-          <p>2</p>
-          <p>3</p>
-          <p>4</p>
-          <p>5</p>
-          <p>6</p>
+        <div class="row">
+          <div class="title">
+            <div class="title-row"><h1>Casa Cruz</h1></div>
+            <div class="title-row"><h1>Ivan Bravo, CL</h1></div>
+            <div class="title-row"><h1>Casa Cruz, 2024</h1></div>
+          </div>
+          <div class="link">
+            <a href="" target="_blank">View Project</a>
+          </div>
         </div>
-        <div><p>&mdash;</p></div>
-        <div><p>6</p></div>
-      </div>
-
-      <div class="slider-preview">
-        <div class="preview active">
-          <img src="./Images/hero/img1.jpg" alt="" />
-        </div>
-        <div class="preview"><img src="./Images/hero/img2.jpg" alt="" /></div>
-        <div class="preview"><img src="./Images/hero/img3.jpg" alt="" /></div>
-        <div class="preview"><img src="./Images/hero/img4.jpg" alt="" /></div>
-        <div class="preview"><img src="./Images/hero/img5.jpg" alt="" /></div>
-        <div class="preview"><img src="./Images/hero/img6.jpg" alt="" /></div>
-      </div>
-
-      <div class="slider-indicators">
-        <p>+</p>
-        <p>+</p>
       </div>
     </div>
 
@@ -145,13 +145,7 @@
       </div>
     </div>
 
-    <!-- Cursor -->
-     <div class="cursor">
-       <p></p>
-     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
-    <script type="module" src="./javascript/index.js"></script>
+    <script type="module" src="./javascript/app.js"></script>
   </body>
 </html>
