--- a/work1.html
+++ b/work1.html
@@ -25,7 +25,7 @@
     <!-- Hero -->
     <div class="client-hero">
       <div class="client-hero-image">
-        <img src="./Images/work1/hero.jpg" alt="" />
+        <img src="./Images/work1/5.jpg" alt="" />
       </div>
       <div class="client-title">
         <h2>Casa Puente</h2>
@@ -34,6 +34,12 @@
         <p>AP-MN04</p>
         <p>Max Núñez Arquitectos, Chile</p>
         <p>Casa Puente, 2024</p>
+      </div>
+      <div class="client-video">
+        <video src="./Images/work1.mp4" type="video/mp4" autoplay muted loop></video>
+      </div>
+      <div class="client-video-clone">
+        <video src="./Images/work1.mp4" type="video/mp4" autoplay muted loop></video>
       </div>
     </div>
 
