--- a/work2.html
+++ b/work2.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./css/setting.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <title>Client - Ivan Bravo, CL</title>
   </head>
   <body>
@@ -34,6 +37,24 @@
         <p>AP-IB01</p>
         <p>Ivan Bravo, Chile</p>
         <p>Casa Cruz, 2024</p>
+      </div>
+      <div class="client-video">
+        <video
+          src="./Images/work2.mp4"
+          type="video/mp4"
+          autoplay
+          muted
+          loop
+        ></video>
+      </div>
+      <div class="client-video-clone">
+        <video
+          src="./Images/work2.mp4"
+          type="video/mp4"
+          autoplay
+          muted
+          loop
+        ></video>
       </div>
     </div>
 
@@ -109,7 +130,7 @@
     <!-- Footer -->
     <div class="footer">
       <div class="footer-img">
-        <img src="./Images/work2/footer.jpg" alt="">
+        <img src="./Images/work2/footer.jpg" alt="" />
       </div>
       <div class="footer-title">
         <p>Next Project</p>
