--- a/work1.html
+++ b/work1.html
@@ -7,18 +7,43 @@
     <link rel="stylesheet" href="./css/setting.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <title>Client - Max Núñez Arquitectos, CL</title>
   </head>
   <body>
     <!-- Nav -->
     <nav>
       <div class="copyright">
-        <span>&copy;2024</span>
+        <span>A - P</span>
       </div>
-      <div class="nav-info">
-        <span class="open-btn">Menu</span>
-        <div class="nav-btn-overlay"></div>
+      <div class="nav-info-wrapper">
+        <div class="nav-info nav-menu">
+          <span class="open-btn">Menu</span>
+          <div class="nav-btn-overlay"></div>
+        </div>
+        <div class="nav-info-wrap">
+          <!-- <div class="nav-info">
+            <span class="open-btn">Home</span>
+            <div class="nav-btn-overlay"></div>
+          </div> -->
+          <div class="nav-info">
+            <span class="open-btn">Work</span>
+            <div class="nav-btn-overlay"></div>
+          </div>
+        </div>
+        <div class="nav-info-wrap">
+          <div class="nav-info">
+            <span class="open-btn">Client</span>
+            <div class="nav-btn-overlay"></div>
+          </div>
+          <div class="nav-info">
+            <span class="open-btn">Info</span>
+            <div class="nav-btn-overlay"></div>
+          </div>
+        </div>
       </div>
     </nav>
 
@@ -36,10 +61,22 @@
         <p>Casa Puente, 2024</p>
       </div>
       <div class="client-video">
-        <video src="./Images/work1.mp4" type="video/mp4" autoplay muted loop></video>
+        <video
+          src="./Images/work1.mp4"
+          type="video/mp4"
+          autoplay
+          muted
+          loop
+        ></video>
       </div>
       <div class="client-video-clone">
-        <video src="./Images/work1.mp4" type="video/mp4" autoplay muted loop></video>
+        <video
+          src="./Images/work1.mp4"
+          type="video/mp4"
+          autoplay
+          muted
+          loop
+        ></video>
       </div>
     </div>
 
@@ -178,7 +215,7 @@
     <!-- Footer -->
     <div class="footer">
       <div class="footer-img">
-        <img src="./Images/work1/footer.jpg" alt="">
+        <img src="./Images/work1/footer.jpg" alt="" />
       </div>
       <div class="footer-title">
         <p>Next Project</p>
